--- a/Representing Data and Engineering Features/feature_engineering.ipynb
+++ b/Representing Data and Engineering Features/feature_engineering.ipynb
@@ -3400,19 +3400,11 @@
     "plt.xlabel(\"Feature magnitude\")\n",
     "plt.ylabel(\"Feature\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37b4924d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -3426,7 +3418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
